# Cpp-Chess-Cient

./: .gitignore  CMakeLists.txt  README.md  buildAndRun.bat  buildAndRun.sh  main.cpp  test.cpp
include/: botHandler.hpp  chess.hpp  guiHandler.hpp
src/: botHandler.cpp  chess.cpp  main.cpp
src/Bot/: botHandler.cpp  botHandler.hpp
src/Core/: Chess.cpp  Chess.hpp  chess.cpp  stfInterface.cpp
src/GUI/: guiHandler.hpp
